putting locations on anchers

--- a/user.html
+++ b/user.html
@@ -30,12 +30,12 @@
         <nav class="nav collapsible__content">
            
           <ul class="nav__list ">
-            <li class="nav__item"><a href="#">Home</a></li>
+            <li class="nav__item"><a href="/user.html">Home</a></li>
             <li class="nav__item"><a href="#services--section">Services</a></li>
-            <li class="nav__item"><a href="#forms--section">About</a></li>
-            <li class="nav__item"><a href="#">Contact</a></li>
+            <li class="nav__item"><a href="#about--section">About</a></li>
+            <li class="nav__item"><a href="#forms--section">Contact</a></li>
           </ul>
-          <a href="/" >
+          <a href="/user.html" >
             <img class="icon nav__logo" src="images/Icons/Logo DevPeaks.png" alt="">
           </a>
         </nav>
@@ -64,7 +64,7 @@
       </div>
     </header>
         <!-- First TextBox Section -->
-    <section class="text-box--top">
+    <section class="text-box--top" id="about--section">
         <div class="text-box__border">
           <h3>Mission Statement</h3>
           <p>
@@ -100,7 +100,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
               obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
             </p>
-            <a href="#" class="link-arrow">Register</a>
+            <a href="#forms--section" class="link-arrow">Register</a>
           </div>
           <picture>
             <img
@@ -118,7 +118,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
               obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
             </p>
-            <a href="#" class="link-arrow">Register</a>
+            <a href="#forms--section" class="link-arrow">Register</a>
           </div>
           <picture>
             <img
@@ -137,7 +137,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
               obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
             </p>
-            <a href="#" class="link-arrow">Register</a>
+            <a href="#forms--section" class="link-arrow">Register</a>
           </div>
           <picture>
             <img
@@ -156,7 +156,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
               obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
             </p>
-            <a href="#" class="link-arrow">Register</a>
+            <a href="#forms--section" class="link-arrow">Register</a>
           </div>
           <picture>
             <img
@@ -175,7 +175,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
               obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
             </p>
-            <a href="#" class="link-arrow">Register</a>
+            <a href="#forms--section" class="link-arrow">Register</a>
           </div>
           <picture>
             <img
@@ -194,7 +194,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
               obcaecati vel ad unde est illo at. Labore excepturi officia dolores!
             </p>
-            <a href="#" class="link-arrow">Register</a>
+            <a href="#forms--section" class="link-arrow">Register</a>
           </div>
           <picture>
             <img
@@ -220,7 +220,7 @@
         <input
           type="text"
           id="name"
-          autofocus
+          
           required
           minlength="2"
           maxlength="100"
@@ -568,10 +568,10 @@
 
         <nav class="footer__nav">
           <ul class="footer__list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/user.html">Home</a></li>
+            <li><a href="#services--section">Services</a></li>
+            <li><a href="#about--section">About</a></li>
+            <li><a href="#forms--section">Contact</a></li>
           </ul>
         </nav>
       </section>
