--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
   />
-    <link rel="stylesheet" href="css/user.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <!-- Navigation Section -->
@@ -36,12 +36,12 @@
         <nav class="nav collapsible__content">
            
           <ul class="nav__list ">
-            <li class="nav__item"><a href="/user.html">Home</a></li>
+            <li class="nav__item"><a href="/index.html">Home</a></li>
             <li class="nav__item"><a href="#services--section">Services</a></li>
             <li class="nav__item"><a href="#about--section">About</a></li>
             <li class="nav__item"><a href="#forms--section">Contact</a></li>
           </ul>
-          <a href="/user.html" >
+          <a href="/index.html" >
             <img class="icon nav__logo" src="images/Icons/Logo DevPeaks.png" alt="">
           </a>
         </nav>
@@ -560,7 +560,7 @@
       <section class="footer--section">
 
         <div class="footer__brand">
-          <a href="/user.html" >
+          <a href="/index.html" >
             <img class="icon nav__logo" src="images/Icons/Logo DevPeaks.png" alt="">
           </a>
           <p class="footer__copyright">Copyright&copy; 2023 DevPeaks</p>
@@ -574,7 +574,7 @@
 
         <nav class="footer__nav">
           <ul class="footer__list">
-            <li><a href="/user.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#services--section">Services</a></li>
             <li><a href="#about--section">About</a></li>
             <li><a href="#forms--section">Contact</a></li>
